# tdotnetbridge

./: .gitignore  CMakeLists.txt  LICENSE.qdotnethost
.github/workflows/: nuget-clientlibrary.yml
bridge/: CMakeLists.txt  tdotnetbridgeConfig.cmake.in
bridge/cmake-scripts/: cmake-dotnet-add.cmake
bridge/include/: qdotnetadapter.h  qdotnetfunction.h  qdotnethost.h  qdotnetmarshal.h  qdotnetobject.h  qdotnetref.h  qdotnetsafemethod.h  qdotnettask.h
bridge/tdotnetbridge/: tdotnetbridge.sln
bridge/tdotnetbridge/tdotnetbridge.Adapter/: Adapter.Delegates.cs  Adapter.Events.cs  Adapter.Methods.cs  Adapter.Objects.cs  Adapter.Test.cs  Adapter.cs  CodeGenerator.cs  EventRelay.cs  InterfaceProxy.cs  ObjectMarshaler.cs  Parameter.cs  StringMarshaler.cs  tdotnetbridge.Adapter.csproj
bridge/tdotnetbridge/tdotnetbridge.ClientLibrary/: ExportToQtAttribute.cs  QObjectAttribute.cs  README.md  tdotnetbridge.ClientLibrary.csproj
bridge/tdotnetbridge/tdotnetbridge.Generator/: ExportedClass.cs  Options.cs  PreExportedClass.cs  Program.cs  RequiredHeader.cs  SemanticPackage.cs  SyntaxTreeProcessor.cs  TypeContext.cs  Utilities.cs  tdotnetbridge.Generator.csproj
bridge/tdotnetbridge/tdotnetbridge.Generator.Tests/: TestTypeContext.cs  tdotnetbridge.Generator.Tests.csproj
test/: CMakeLists.txt  main.cpp  testobjectclass.h
test/tdotnetbridge.Test/: Class1.cs  tdotnetbridge.Test.sln
